--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "live-server --port=8000",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node src/test.js",
+    "cover": "istanbul cover src/test.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,9 @@
   },
   "homepage": "https://github.com/Abdelmageed/learn-tdd#readme",
   "devDependencies": {
-    "live-server": "^1.2.0"
+    "istanbul": "^0.4.5",
+    "live-server": "^1.2.0",
+    "qunit-tap": "^1.5.1",
+    "qunitjs": "^2.1.1"
   }
 }
