--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/Abdelmageed/learn-tdd#readme",
   "devDependencies": {
+    "codecov": "^1.0.1",
     "istanbul": "^0.4.5",
     "live-server": "^1.2.0",
     "qunit-tap": "^1.5.1",
